--- a/recipes-bsp/u-boot/files/ultra96.bif.tmpl
+++ b/recipes-bsp/u-boot/files/ultra96.bif.tmpl
@@ -13,6 +13,6 @@ image : {
 	[pmufw_image] ../usr/share/zynqmp/pmufw.elf
 	[bootloader, destination_cpu=a5x-0] ../usr/share/zynqmp/fsbl.elf
 	../design_1_wrapper.bit
-	[destination_cpu=a5x-0, exception_level=el-3,trustzone] ../arm-trusted-firmware-@ATF_PV@/build/zynqmp/release/bl31/bl31.elf
+	[destination_cpu=a5x-0, exception_level=el-3,trustzone] ../arm-trusted-firmware-${ATF_PV}/build/zynqmp/release/bl31/bl31.elf
 	[destination_cpu=a5x-0, exception_level=el-2] u-boot.elf
 }
