ultra96: Rename to ultra96-v1
This prepares for adding support for the v2 which will be widely
identical, except where not:
 - fsbl
 - bitstream
 - device tree

The PMU firmware will be customized later as the current version works
sufficiently well for both boards.

Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/recipes-bsp/u-boot/files/ultra96.bif.tmpl
+++ b/recipes-bsp/u-boot/files/ultra96.bif.tmpl
@@ -11,8 +11,8 @@
 
 image : {
 	[pmufw_image] /usr/share/zynqmp-pmufw/executable.elf
-	[bootloader, destination_cpu=a5x-0] ../ultra96-fsbl.elf
-	../ultra96.bit
+	[bootloader, destination_cpu=a5x-0] ../ultra96-v${ULTRA96_VERSION}-fsbl.elf
+	../ultra96-v${ULTRA96_VERSION}.bit
 	[destination_cpu=a5x-0, exception_level=el-3,trustzone] ../arm-trusted-firmware-${ATF_PV}/build/zynqmp/release/bl31/bl31.elf
 	[destination_cpu=a5x-0, exception_level=el-2] u-boot.elf
 }
