jailhouse: Update debianization to be ready for Debian 11
Debian 11 started to remove python2 support, so we need to update the
(build-)dependencies to python3. As python3 is already provided by
Debian 10, there is no breaking change.

Signed-off-by: Florian Bezdeka <florian.bezdeka@siemens.com>
[Jan: adjusted wording of commit message]
Signed-off-by: Jan Kiszka <jan.kiszka@siemens.com>

--- a/recipes-jailhouse/jailhouse/files/debian/control.tmpl
+++ b/recipes-jailhouse/jailhouse/files/debian/control.tmpl
@@ -3,11 +3,11 @@ Section: misc
 Priority: optional
 Standards-Version: 3.9.6
 Build-Depends: linux-headers-${KERNEL_NAME}, git,
-               dh-python, python-pip:native, python-setuptools, python-mako:native
+               dh-python, python3-pip:native, python3-setuptools, python3-mako:native
 Maintainer: Jan Kiszka <jan.kiszka@siemens.com>
 X-Python-Version: >= 2.7
 
 Package: ${PN}
 Architecture: any
-Depends: ${shlibs:Depends}, ${python:Depends}, linux-image-${KERNEL_NAME}, python-mako
+Depends: ${shlibs:Depends}, ${python3:Depends}, linux-image-${KERNEL_NAME}, python3-mako
 Description: ${DESCRIPTION}
